--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGO_DB_CONNECTION_STRING=mongodb+srv://admin:oKUeK9oA37XIg7go@mern-booking-app-db.fehqhg0.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET_KEY=HD8m1zi7jvXiQ9UlMlHzoBKrIBhnBIR5
